# vOMIX-MEGA

./: .gitignore  .readthedocs.yaml  pyproject.toml
config/: config.schema.csv  config.schema.xlsx  config.schema.yml  config.yml  config_generate.py
docs/: Home.md  Outputs.md  advanced.md  conf.py  index.md  index.rst  install.md  output.md  outputs.md  quickstart.md  requirements.txt  run.md  troubleshoot.md
docs/_build/html/: .buildinfo  Advanced-Usage.html  Home.html  Outputs.html  Run-&-Configuration.html  Troubleshooting.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: Advanced-Usage.doctree  Home.doctree  Outputs.doctree  Run-&-Configuration.doctree  Troubleshooting.doctree  environment.pickle  index.doctree
docs/_build/html/_sources/: Advanced-Usage.md.txt  Run-&-Configuration.md.txt  Troubleshooting.md.txt
docs/modules/: index.md  preprocess.md
vomix/: module.py  modules.py  vomix.py  vomix_actions.py
workflow/: Dockerfile  Snakefile
workflow/envs/: coverm.yml  dram.yml  gtdbtk.yml  hvseeker.yml  metacerberus.yml  metaphlan.yml  parallel-virfinder.yml  pharokka.yml  strobealign.yml  vibrant.yml
workflow/rules/: assembly.smk  preprocess.smk  prok-binning.smk  setup-database.smk  viral-annotate.smk  viral-benchmark.smk  viral-binning.smk  viral-host.smk  viral-identify.smk
workflow/scripts/: sample_list_parse.py
